--- a/EssentialCore/FORMULARIOS/FrmListaDeClientes.xaml
+++ b/EssentialCore/FORMULARIOS/FrmListaDeClientes.xaml
@@ -5,9 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:EssentialCore.FORMULARIOS"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="FrmListaDeClientes"
-    Width="800"
-    Height="450"
+    Title="LISTA DE CLIENTES"
+    Width="900"
+    Height="550"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -58,7 +60,8 @@
             <TextBox
                 Name="txtId"
                 Width="300"
-                Height="25" PreviewTextInput="TextBox_PreviewTextInput"/>
+                Height="25"
+                PreviewTextInput="TextBox_PreviewTextInput" />
             <Button
                 Name="BtnBuscarCliente"
                 Width="25"
