--- a/EssentialCore/FORMULARIOS/FrmMenu.xaml
+++ b/EssentialCore/FORMULARIOS/FrmMenu.xaml
@@ -1,48 +1,75 @@
-﻿<Window x:Class="EssentialCore.FORMULARIOS.FrmMenu"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EssentialCore.FORMULARIOS"
-        mc:Ignorable="d"
-        Title="FrmMenu" Height="550" Width="900">
+﻿<Window
+    x:Class="EssentialCore.FORMULARIOS.FrmMenu"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="ESSENCIAL CORE"
+    Width="900"
+    Height="550"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" Background="AliceBlue" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="meuBotao" Width="200" Height="200" Background="#153C59" BorderBrush="#1E475E" BorderThickness="2" Click="BtnCadastroCliente_Click">
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="AliceBlue">
+            <Button
+                x:Name="meuBotao"
+                Width="200"
+                Height="200"
+                Background="#153C59"
+                BorderBrush="#1E475E"
+                BorderThickness="2"
+                Click="BtnCadastroCliente_Click">
                 <Button.Effect>
-                    <DropShadowEffect ShadowDepth="10" BlurRadius="20" Color="Black" Opacity="0.7"/>
+                    <DropShadowEffect
+                        BlurRadius="20"
+                        Opacity="0.7"
+                        ShadowDepth="10"
+                        Color="Black" />
                 </Button.Effect>
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
-                        <Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                        <Border
+                            x:Name="border"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
                             <Grid>
-                                <Image Source="/IMAGEM/img_cliente.png" Width="150" Height="150"/>
+                                <Image
+                                    Width="150"
+                                    Height="150"
+                                    Source="/IMAGEM/img_cliente.png" />
                             </Grid>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="border" Property="Background" Value="#153C69"/>
-                                <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+                                <Setter TargetName="border" Property="Background" Value="#153C69" />
+                                <Setter Property="RenderTransformOrigin" Value="0.5, 0.5" />
                                 <Setter Property="RenderTransform">
                                     <Setter.Value>
-                                        <ScaleTransform ScaleX="1.01" ScaleY="1.01"/>
+                                        <ScaleTransform ScaleX="1.01" ScaleY="1.01" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
                             <Trigger Property="IsMouseOver" Value="False">
-                                <Setter TargetName="border" Property="Background" Value="#153C59"/>
-                                <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+                                <Setter TargetName="border" Property="Background" Value="#153C59" />
+                                <Setter Property="RenderTransformOrigin" Value="0.5, 0.5" />
                                 <Setter Property="RenderTransform">
                                     <Setter.Value>
-                                        <ScaleTransform ScaleX="1" ScaleY="1"/>
+                                        <ScaleTransform ScaleX="1" ScaleY="1" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -52,8 +79,17 @@
             </Button>
 
         </StackPanel>
-        <StackPanel Grid.Row="0" Grid.Column="1" Background="Orange"></StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="0" Background="Green"></StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="1" Background="Pink"></StackPanel>
+        <StackPanel
+            Grid.Row="0"
+            Grid.Column="1"
+            Background="Orange" />
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="0"
+            Background="Green" />
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="1"
+            Background="Pink" />
     </Grid>
 </Window>
