--- a/EssentialCore/MainWindow.xaml
+++ b/EssentialCore/MainWindow.xaml
@@ -1,41 +1,84 @@
-﻿<Window x:Class="EssentialCore.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EssentialCore"
-        Width="500"
-        Height="300"
-        ResizeMode="NoResize"
-        mc:Ignorable="d"
-        Title="MainWindow">
+﻿<Window
+    x:Class="EssentialCore.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:EssentialCore"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="LOGIN"
+    
+    Width="500"
+    Height="300"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Grid>
         <StackPanel Orientation="Horizontal">
-
-            <StackPanel Background="Blue" Width="150">
-                <Image Source="IMAGEM/telaLogin.jpg" Width="250" Height="300"></Image>
+            <StackPanel Width="150" Background="Blue">
+                <Image
+                    Width="250"
+                    Height="300"
+                    Source="IMAGEM/telaLogin.jpg" />
             </StackPanel>
-            <StackPanel Background="WhiteSmoke" Width="350">
+            <StackPanel Width="350" Background="WhiteSmoke">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
-                    <StackPanel Margin="0,15,0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <StackPanel
+                        Margin="0,15,0,0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center">
                         <StackPanel>
-                            <Label Content="Usuario" Margin="0,5,0,0" FontSize="16"></Label>
-                            <TextBox Name="nomeLogin" Grid.Row="0" Width="200" Height="35"  VerticalContentAlignment="Center"/>
+                            <Label
+                                Margin="0,5,0,0"
+                                Content="Usuario"
+                                FontSize="16" />
+                            <TextBox
+                                Name="nomeLogin"
+                                Grid.Row="0"
+                                Width="200"
+                                Height="35"
+                                VerticalContentAlignment="Center" />
 
-                            <Label Content="Senha" Margin="0,5,0,0" FontSize="16"></Label>
-                            <PasswordBox Name="senhaLogin" Grid.Row="1" Width="200" Height="35" HorizontalAlignment="Center" VerticalContentAlignment="Center"/>
+                            <Label
+                                Margin="0,5,0,0"
+                                Content="Senha"
+                                FontSize="16" />
+                            <PasswordBox
+                                Name="senhaLogin"
+                                Grid.Row="1"
+                                Width="200"
+                                Height="35"
+                                HorizontalAlignment="Center"
+                                VerticalContentAlignment="Center" />
                         </StackPanel>
-                        <StackPanel Orientation="Vertical" Margin="10" HorizontalAlignment="Center">
-                            <Button Content="Entrar" Background="White" FontWeight="ExtraLight" Grid.Row="2" Width="125" Height="40" Margin="5" Click="BtnLogin_Click"/>
-                            <Label Content=" Esqueceu a senha? " FontStyle="Italic" FontWeight="ExtraLight" Grid.Row="2" Width="auto" Height="25" Margin="5"/>
+                        <StackPanel
+                            Margin="10"
+                            HorizontalAlignment="Center"
+                            Orientation="Vertical">
+                            <Button
+                                Grid.Row="2"
+                                Width="125"
+                                Height="40"
+                                Margin="5"
+                                Background="White"
+                                Click="BtnLogin_Click"
+                                Content="Entrar"
+                                FontWeight="ExtraLight" />
+                            <Label
+                                Grid.Row="2"
+                                Width="auto"
+                                Height="25"
+                                Margin="5"
+                                Content=" Esqueceu a senha? "
+                                FontStyle="Italic"
+                                FontWeight="ExtraLight" />
                         </StackPanel>
                     </StackPanel>
                 </Grid>
