--- a/EssentialCore/FORMULARIOS/FrmListaDeClientes.xaml
+++ b/EssentialCore/FORMULARIOS/FrmListaDeClientes.xaml
@@ -8,7 +8,6 @@
     Title="LISTA DE CLIENTES"
     Width="1280"
     Height="720"
-    ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
@@ -44,15 +43,16 @@
             Grid.Row="1"
             HorizontalAlignment="Center"
             Orientation="Horizontal">
-            <Label
-                Width="auto"
-                Height="25"
-                Content="Id:" />
+            <ComboBox Name="OpcaoBuscaCliente" HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" Height="25">
+                <ComboBoxItem Content="Id" Name="selecionarId"/>
+                <ComboBoxItem Content="Nome" Name="selecionarNome" IsSelected="True"/>
+            </ComboBox>
             <TextBox
                 Name="txtId"
                 Width="300"
                 Height="25"
-                PreviewTextInput="TextBox_PreviewTextInput" />
+                PreviewTextInput="TextBox_PreviewTextInput"
+                TextChanged="BtnBuscarCliente_Click"/>
             <Button
                 Name="BtnBuscarCliente"
                 Width="25"
